1. Replaced all '' with " in constants 2. Implemented CreateFeedbackInBoardCommand 3. Implemented loggedTeam method in repository 4. Replaced getFirst methods with parameters.get(0)